# Tradingview-Backtesting

./: .gitignore  .mcp.json  .session_startup_prompt.md  CLAUDE.md  README.md  Timeframe_Continuity_Claude_Discussion.md  Timeframe_Continuity_Pinescript.pine  pyproject.toml
.claude/: settings.json
analysis/: __init__.py  fee_rates_by_dex.py  flipline_distance.py  funding_model.py  giveback.py  l2_book_impact.py  tfc_hl_pilot.py  tfc_leverage_overlay.py  trade_mae.py  tvb14_bf_pool_fixture.py  verify_xyz_backfill.py  window_compound.py
docs/: ATLAS_Timeframe_Continuity_Charter.md  EXTERNAL_REVIEW_PROTOCOL.md  HANDOFF.md  INDEX.md  TVB2_control_AB_rerun.md  VBT_BREADTH_PORT_PLAN.md
pine/: README.md  baseline_continuity.pine  bf_comprehension.pine  tfc_bf_watch.pine  tfc_companion.pine  tvb_exp_bf_exit.pine  tvb_exp_champion.pine  winner_champion_mu15.pine  winner_generalizer.pine  winner_shortchamp_mu5.pine  winner_slow60.pine
results/: .gitkeep
scripts/: secret_scan.py  secret_scan_allowlist.txt  tfc_breadth_sweep.py  tfc_exit_sweep.py  tfc_gate_report.py  tfc_htf_sweep.py  tfc_qty_calibration.py  tv_bars.mjs  tv_dump.mjs  tv_probe.mjs  tvb11_champion_collect.mjs  tvb12_replay_collect.mjs  tvb12_replay_compare.mjs  tvb15_symbolinfo.mjs  tvb9_symbolinfo.mjs
tests/: test_fee_rates.py  test_funding_model.py  test_giveback_fixture.py  test_l2_book_impact.py  test_paper_archive.py  test_paper_engine.py  test_paper_roster.py  test_smoke.py  test_tfc_equivalence_gate.py  test_tfc_periods.py  test_tfc_providers.py  test_tfc_reference.py  test_tfc_resample.py  (+4 more)
(+243 files in other folders)
